<resources>
    <string name="app_name">Assignment_mob_app</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_prompt">sign in to access your account</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="next">Next ></string>
    <string name="new_member_register">New member?<font color="#6C63FF">Register now</font></string>

    <string name="get_started">Get Started</string>
    <string name="get_started2">by creating a free account.</string>
    <string name="full_name_hint">Full name</string>
    <string name="valid_email_hint">Valid email</string>
    <string name="phone_hint">Phone number</string>
    <string name="strong_password_hint">Strong password</string>
    <string name="terms">By checking the box you agree to our <font color="#6C63FF">Terms</font> and <font color="#6C63FF">Conditions</font>.</string>
    <string name="next2">Next ></string>
    <string name="already_member">Already a member?<font color="#6C63FF">Log in</font></string>

    <string name="background_image_description">Background Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>