<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:contentDescription="@string/background_image_description"
        android:scaleType="centerInside"
        android:src="@drawable/background"
        app:layout_constraintBottom_toTopOf="@+id/dividerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#DADADA"
        app:layout_constraintTop_toBottomOf="@id/bgImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerView" />

    <TextView
        android:id="@+id/tvGetStarted2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/get_started2"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toBottomOf="@id/tvGetStarted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:background="@drawable/edit_text_shape"
        android:drawableEnd="@drawable/user"
        android:hint="@string/full_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGetStarted2" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_shape"
        android:drawableEnd="@drawable/mail"
        android:hint="@string/valid_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/etFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:autofillHints="phone"
        android:background="@drawable/edit_text_shape"
        android:drawableEnd="@drawable/smartphone"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_shape"
        android:drawableEnd="@drawable/lock"
        android:hint="@string/strong_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <CheckBox
        android:id="@+id/cbTermsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="303dp"
        android:layout_height="50dp"
        android:background="@drawable/button_shape"
        android:text="@string/next2"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbTermsAndConditions"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/tvAlreadyMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_member"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
